Minor alignment fix on easy signin text

--- a/client/styles/Login.module.scss
+++ b/client/styles/Login.module.scss
@@ -22,7 +22,6 @@
         }
 
         .third-party-signin {
-            margin-top: 10px;
             margin-bottom: 20px;
         }
 
